--- a/layout.css
+++ b/layout.css
@@ -36,9 +36,9 @@ h5 {
 	text-shadow: 1px 1px #000000;
 }
 p {
-	font-family: Tahoma, "sans-serif";
+	font-family: Helvetica, "sans-serif";
 	font-size: 1em;
-	color: #F0F0F0;
+	color: #FFFFFF;
 }
 img {
   max-width: 50em;
@@ -122,17 +122,18 @@ nav {
 	padding-top: 14px;
 	padding-bottom: 14px;
 	color: #FFFFFF;
-	background-color: #f6bf3a;
-	font-family: "Verdana";
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+	background-color: #A65A27;
+	font-family: "Impact";
+	text-shadow: 2px 2px #000000;
+	border-style: outset;
+	border-color: #AC6535;
 }
 
 .navlistitem a:hover {
 	color: #000000;
-	background-color: #FFFFFF;
+	text-shadow: 2px 2px #FFFFFF;
+	background-color: #AC6535;
+	border-color: #A65A27;
 }
 
 /*centering the image */
