--- a/nintendo/nes.css
+++ b/nintendo/nes.css
@@ -3,7 +3,7 @@
 
 body {
 	width: 100%;
-	background-color: #9185FF;
+	background-color: #ACACAC;
 	background-size: cover;
 	background-attachment: fixed;
 	margin: 0;
@@ -45,7 +45,7 @@ img {
 
 }
 main {
-    background-color: #dda727;
+    background-color: #1F1F1F;
     width: auto;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -53,11 +53,11 @@ main {
     margin-right: auto;
     padding: 2%;
 	border-style: outset;
-	border-color: #E2BA5D;
+	border-color: #3B3B3B;
 	border-width: 10px;
 }
 section {
-    background-color: #dda727;
+    background-color: #1F1F1F;
     width: 55%;
     margin-bottom: 20px;
     margin-left: 3%;
@@ -65,11 +65,11 @@ section {
     float: left;
     padding: 2%;
 	border-style: outset;
-	border-color: #E2BA5D;
+	border-color: #3B3B3B;
 	border-width: 10px;
 }
 aside {
-    background-color: #dda727;
+    background-color: #1F1F1F;
     width: 28%;
     margin-bottom: 20px;
     margin-left: .5%;
@@ -77,7 +77,7 @@ aside {
     float: right;
     padding: 2%;
 	border-style: outset;
-	border-color: #E2BA5D;
+	border-color: #3B3B3B;
 	border-width: 10px;
 }
 footer {
@@ -89,7 +89,7 @@ footer {
 /* This is the navigation stuff */
 
 nav {
-	background-color: #BC6225;
+	background-color: #CE1400;
 	text-align: center;
 }
 
@@ -112,18 +112,18 @@ nav {
 	padding-top: 14px;
 	padding-bottom: 14px;
 	color: #FFFFFF;
-	background-color: #A65A27;
-	font-family: "Impact";
+	background-color: #CE1400;
+	font-family: "Bahnschrift";
 	text-shadow: 2px 2px #000000;
 	border-style: outset;
-	border-color: #BC6E3A;
+	border-color: #DB6053;
 }
 
 .navlistitem a:hover {
 	color: #000000;
 	text-shadow: 2px 2px #FFFFFF;
-	background-color: #BC6E3A;
-	border-color: #A65A27;
+	background-color: #DB6053;
+	border-color: #CE1400;
 }
 
 /*centering the image */
