--- a/nintendo/gcn.css
+++ b/nintendo/gcn.css
@@ -3,7 +3,7 @@
 
 body {
 	width: 100%;
-	background-color: #9185FF;
+	background-color: #6A5FAE;
 	background-size: cover;
 	background-attachment: fixed;
 	margin: 0;
@@ -39,34 +39,13 @@ p {
 	color: #FFFFFF;
 	text-shadow: 1px 1px 2px #000000;
 }
-a:link, a:visited,  a:hover, a:active
-{
-    color: #FFFFFF;
-    text-decoration: none;
-}
-button {
-  border: none;
-  background-color: #BC6225;
-  padding: 15px 32px;
-  font-family: Impact;
-  text-shadow: 1.5px 1.5px 2px #000000;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 24px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-style: outset;
-  border-color: #BC6E3A;
-  border-width: 5px;
-}
 img {
   max-width: 50em;
   margin: 25px;
 
 }
 main {
-    background-color: #D8A222;
+	background-color: #C2C2C2;
     width: auto;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -74,11 +53,15 @@ main {
     margin-right: auto;
     padding: 2%;
 	border-style: outset;
-	border-color: #EFC258;
+	border-color: #D3D3D3;
 	border-width: 10px;
+    border-top-left-radius: 55px;
+	border-top-right-radius: 55px;
+    border-bottom-left-radius: 55px;
+    border-bottom-right-radius: 55px;
 }
 section {
-    background-color: #D8A222;
+    background-color: #C2C2C2;
     width: 55%;
     margin-bottom: 20px;
     margin-left: 3%;
@@ -86,11 +69,15 @@ section {
     float: left;
     padding: 2%;
 	border-style: outset;
-	border-color: #EFC258;
+	border-color: #D3D3D3;
 	border-width: 10px;
+    border-top-left-radius: 55px;
+	border-top-right-radius: 55px;
+    border-bottom-left-radius: 55px;
+    border-bottom-right-radius: 55px;
 }
 aside {
-    background-color: #D8A222;
+    background-color: #C2C2C2;
     width: 28%;
     margin-bottom: 20px;
     margin-left: .5%;
@@ -98,8 +85,12 @@ aside {
     float: right;
     padding: 2%;
 	border-style: outset;
-	border-color: #EFC258;
+	border-color: #D3D3D3;
 	border-width: 10px;
+    border-top-left-radius: 55px;
+	border-top-right-radius: 55px;
+    border-bottom-left-radius: 55px;
+    border-bottom-right-radius: 55px;
 }
 footer {
 	font-size: small;
@@ -110,9 +101,13 @@ footer {
 /* This is the navigation stuff */
 
 nav {
-	background-color: #BC6225;
+	background-image: linear-gradient(#C2C2C2, #A8A8A8);
 	text-align: center;
 	padding: 0.01%;
+    border-top-left-radius: 55px;
+	border-top-right-radius: 55px;
+    border-bottom-left-radius: 55px;
+    border-bottom-right-radius: 55px;
 }
 
 .navlist {
@@ -134,18 +129,22 @@ nav {
 	padding-top: 14px;
 	padding-bottom: 14px;
 	color: #FFFFFF;
-	background-color: #A65A27;
+	background-color: #DBDADF;
 	font-family: "Bahnschrift";
 	text-shadow: 2px 2px #000000;
 	border-style: outset;
-	border-color: #BC6E3A;
+	border-color: #EBEAEF;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .navlistitem a:hover {
 	color: #000000;
 	text-shadow: 2px 2px #FFFFFF;
-	background-color: #BC6E3A;
-	border-color: #A65A27;
+	background-color: #EBEAEF;
+	border-color: #DBDADF;
 }
 
 /*centering the image */
